[package]
name = "gewu_zero_rust"
version = "0.1.0"
authors = ["pillar <ymblender@gamil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
futures = "0.3"
tide = "0.16.0"
async-std = {version = "1.8.0", features = ["attributes"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]